--- a/MyNews/app/src/main/res/layout/list_item_layout.xml
+++ b/MyNews/app/src/main/res/layout/list_item_layout.xml
@@ -5,11 +5,10 @@
 
     <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
+        style="@style/CardViewStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="10dp"
-        card_view:cardCornerRadius="10dp">
+        android:layout_gravity="center">
 
         <LinearLayout
             android:layout_width="match_parent"
