--- a/MyNews/app/src/main/res/layout/list_news_item_layout.xml
+++ b/MyNews/app/src/main/res/layout/list_news_item_layout.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="200dp"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -16,16 +16,24 @@
             android:orientation="vertical">
 
             <TextView
+                android:textColor="@android:color/white"
+                android:id="@+id/title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/title"
-                android:textColor="@color/white" />
+                android:textSize="30sp" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rview"
+            <TextView
+                android:id="@+id/content"
                 android:layout_width="match_parent"
-                android:layout_height="200dp" />
+                android:layout_height="wrap_content"
+                android:textSize="15sp" />
 
+            <TextView
+                android:id="@+id/time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="end"
+                android:textSize="20sp" />
         </LinearLayout>
 
 
