--- a/MyNews/app/src/main/res/values/dimens.xml
+++ b/MyNews/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="fragment_horizontal_margin">16dp</dimen>
     <dimen name="fragment_vertical_margin">16dp</dimen>
+    <dimen name="list_shopping_image_size">100dp</dimen>
 </resources>
