--- a/MyNews/app/src/main/res/layout/activity_web_view.xml
+++ b/MyNews/app/src/main/res/layout/activity_web_view.xml
@@ -10,4 +10,11 @@
         android:id="@+id/webview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    <include
+        android:background="@android:color/transparent"
+        android:id="@+id/progress"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        layout="@layout/progress_dialog"/>
 </FrameLayout>
