--- a/MyNews/app/src/main/res/layout/fragment_main.xml
+++ b/MyNews/app/src/main/res/layout/fragment_main.xml
@@ -83,5 +83,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/recyclerView" />
 
+    <include
+        android:id="@+id/progress"
+        layout="@layout/progress_dialog"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/transparent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
