--- a/MyNews/app/src/main/res/layout/list_keyword_item_layout.xml
+++ b/MyNews/app/src/main/res/layout/list_keyword_item_layout.xml
@@ -11,11 +11,15 @@
         android:layout_gravity="center">
 
         <LinearLayout
+            android:layout_gravity="center"
+            android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
+                android:layout_gravity="center"
+                android:gravity="center"
                 android:id="@+id/keyword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
