--- a/MyNews/app/src/main/res/layout/fragment_main.xml
+++ b/MyNews/app/src/main/res/layout/fragment_main.xml
@@ -23,24 +23,15 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/clearBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:text="Clear"
-            app:layout_constraintEnd_toStartOf="@id/searchBtn"
-            app:layout_constraintTop_toTopOf="parent" />
-
         <androidx.appcompat.widget.SearchView
             android:id="@+id/searchView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toStartOf="@id/clearBtn"
+            app:layout_constraintEnd_toStartOf="@id/searchBtn"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id='@+id/keyword_layout'
@@ -68,6 +59,20 @@
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <LinearLayout
+        android:visibility="gone"
+        android:id="@+id/suggestionView"
+        app:layout_constraintTop_toBottomOf="@id/keyword_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="AAAAAAAAA"/>
+    </LinearLayout>
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
@@ -84,7 +89,7 @@
         app:layout_constraintTop_toBottomOf="@id/recyclerView" />
 
     <include
-        android:id="@+id/progress"
+        android:id="@+id/progressView"
         layout="@layout/progress_dialog"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
