--- a/MyNews/app/src/main/res/layout/dialog_layout.xml
+++ b/MyNews/app/src/main/res/layout/dialog_layout.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <EditText
-        android:textColorHint="@android:color/white"
+    <TextView
+        android:textColor="@android:color/white"
+        android:layout_margin="10dp"
+        android:layout_width="match_parent"
+        android:text="Search를 눌러 검색"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:textColor="@android:color/white"
+        android:layout_margin="10dp"
         android:id="@+id/edit"
         android:layout_width="match_parent"
-        android:hint="여기에 입력하세요"
+        android:text="Reset를 눌러 검색 결과 삭제"
         android:layout_height="wrap_content" />
-</FrameLayout>
+
+</LinearLayout>
